--- a/templates/dashboard/subscription_detail.html
+++ b/templates/dashboard/subscription_detail.html
@@ -1,10 +1,10 @@
-{% extends "dashboard/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}
 {{ subscription.platform_name }} - {{ subscription.service_name }}
 {% endblock %}
 
-{% block student_content %}
+{% block content %}
 <div class="bg-white shadow-md rounded-lg p-6 mb-4">
     <h2 class="text-2xl font-semibold mb-4">{{ subscription.platform_name }} - {{ subscription.service_name }}</h2>
 
