--- a/templates/dashboard/subscription_list.html
+++ b/templates/dashboard/subscription_list.html
@@ -1,10 +1,10 @@
-{% extends "dashboard/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}
     Subscription List
 {% endblock %}
 
-{% block student_content %}
+{% block content %}
     <div class="bg-white shadow-md rounded-lg mb-4">
         <div class="px-6 py-4">
             <h2 class="text-xl font-semibold">Subscription List</h2>
