--- a/templates/accounts/user_detail.html
+++ b/templates/accounts/user_detail.html
@@ -1,10 +1,10 @@
-{% extends "dashboard/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}
     User Detail: {{ user_detail.user.username }}
 {% endblock %}
 
-{% block student_content %}
+{% block content %}
     <div class="bg-white shadow-md rounded-lg p-6 mb-4">
         <h2 class="text-2xl font-semibold mb-4">User Details</h2>
 
