--- a/templates/base.html
+++ b/templates/base.html
@@ -32,19 +32,21 @@
     </nav>
 </header>
 
+<!-- Content -->
 <main class="container mx-auto py-6 px-4">
-    {% block student_content %}
+    {% block content %}
         <p class="text-gray-600">This is default content.</p>
     {% endblock %}
 </main>
 
+<!-- Footer -->
 <footer class="bg-black/80 text-white py-3">
     <div class="container mx-auto text-center text-sm">
         <p class="mb-1">
             <strong class="font-medium">SubFlo</strong> helps you manage your subscriptions. Identify and cancel forgotten subscriptions with ease.
         </p>
         <p class="mb-0">
-            &copy; 2024 - A project to manage your subscriptions
+            &copy; 2026 - A project to manage your subscriptions
         </p>
     </div>
 </footer>
