--- a/templates/dashboard/subscription_detail.html
+++ b/templates/dashboard/subscription_detail.html
@@ -4,6 +4,12 @@
 {{ subscription.platform_name }} - {{ subscription.service_name }}
 {% endblock %}
 
+
+{% block search %}
+
+{% endblock %}
+
+
 {% block content %}
 <div class="bg-white shadow-md rounded-lg p-6 mb-4">
     <h2 class="text-2xl font-semibold mb-4">{{ subscription.platform_name }} - {{ subscription.service_name }}</h2>
