--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 <header>
     <nav class="bg-black/90 py-4 shadow-md">
         <div class="container mx-auto flex items-center justify-between px-4">
-            <a href="#" class="text-white text-2xl font-semibold">SubFlo</a>
+            <a href="{% url 'subscription-list-url' %}" class="text-white text-2xl font-semibold">SubFlo</a>
             <div class="flex items-center">
                 <div class="w-9 h-9 rounded-full bg-gray-300 flex items-center justify-center text-gray-700 font-medium">
                     U <!-- TODO: replace with user initials or image later -->
