Implement `POST` method for searching to hide sentitive info

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,10 @@
 
 <!-- Content -->
 <main class="container mx-auto py-6 px-4">
-    {% block search %}
+    {% block search_service_or_platform %}
+    {% endblock %}
 
+    {% block search_note %}
     {% endblock %}
 
 
