--- a/templates/dashboard/subscription_list.html
+++ b/templates/dashboard/subscription_list.html
@@ -5,10 +5,8 @@
 {% endblock %}
 
 
-
-{% block search %}
+{% block search_service_or_platform %}
   <form method="get" class="mb-4 flex items-center space-x-2">
-
     <div class="flex-1">
       <input type="search" name="q" value="{{ q }}"
              class="w-full px-4 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
@@ -21,7 +19,7 @@
           Search
       </button>
 
-      {% if q %}
+      {% if q or text %}
         <a href="{% url 'subscription-list-url' %}"
            class="bg-gray-200 hover:bg-gray-300 text-gray-800 font-medium py-2 px-4 rounded-md ml-2">Clear</a>
       {% endif %}
@@ -31,7 +29,28 @@
   </form>
 {% endblock %}
 
+{% block search_note %}
+  <div class="bg-white shadow-md rounded-lg p-4 mb-4">
+    <h3 class="text-lg font-semibold mb-2">Search by Notes</h3>
+    <form method="post" class="flex items-center space-x-2">
+      {% csrf_token %}
 
+      <div class="flex-1">
+        <input type="search" name="text" value="{{ text }}"
+               class="w-full px-4 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
+               placeholder="Search by note...">
+      </div>
+
+      <div>
+        <button type="submit"
+                class="bg-blue-500 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-md">
+            Search
+        </button>
+      </div>
+
+    </form>
+  </div>
+{% endblock %}
 
 
 
@@ -40,7 +59,7 @@
         <div class="px-6 py-4">
             <h2 class="text-xl font-semibold">Subscription List</h2>
             <ul class="mt-2">
-                  
+
                 {% for sub in subscriptions %}
                     <li class="flex items-center justify-between py-3 border-b border-gray-200 last:border-b-0 hover:bg-gray-50">
                         <div>
@@ -53,8 +72,8 @@
                         </div>
                     </li>
                 {% empty %}
-                    {% if q %}
-                        <li class="py-2">No subscriptions found for "{{ q }}"</li>
+                    {% if q or text %}
+                        <li class="py-2">No subscriptions found.</li>
                     {% else %}
                     <li class="py-2">No subscriptions yet!</li>
                     {% endif %}
