--- a/templates/base.html
+++ b/templates/base.html
@@ -38,10 +38,10 @@
 
 <!-- Content -->
 <main class="container mx-auto py-6 px-4">
-    {% block search_service_or_platform %}
+    {% block summary %}
     {% endblock %}
 
-    {% block search_note %}
+    {% block search %}
     {% endblock %}
 
 
