--- a/templates/dashboard/subscription_detail.html
+++ b/templates/dashboard/subscription_detail.html
@@ -23,6 +23,7 @@
             </p>
         </div>
         <div>
+            <p class="text-gray-700"><strong>Is Trial:</strong> {{ subscription.is_trial|yesno:"Yes,No" }}</p>
             <p class="text-gray-700"><strong>Already Canceled:</strong> {{ subscription.already_canceled|yesno:"Yes,No" }}</p>
             <p class="text-gray-700"><strong>Notes:</strong> {{ subscription.notes|default:"N/A" }}</p>
         </div>
@@ -31,6 +32,7 @@
         <a href="{% url 'subscription-list-url' %}"
             class="inline-block bg-gray-200 hover:bg-gray-300 text-gray-800 font-medium py-2 px-4 rounded-md transition duration-200">Back
             to List</a>
+            
         {% if subscription.unsubscribe_link %}
         <a href="{% if subscription.unsubscribe_link|slice:':4' != 'http' %}https://{% endif %}{{ subscription.unsubscribe_link }}" target="_blank"
             class="inline-block bg-red-500 hover:bg-red-700 text-white font-medium py-2 px-4 rounded-md transition duration-200">Cancel</a>
