--- a/templates/accounts/user_detail.html
+++ b/templates/accounts/user_detail.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="mt-6">
-            <a href="#" class="inline-block bg-gray-200 hover:bg-gray-300 text-gray-800 font-medium py-2 px-4 rounded-md transition duration-200">
+            <a href="{% url 'subscription-list-url' %}" class="inline-block bg-gray-200 hover:bg-gray-300 text-gray-800 font-medium py-2 px-4 rounded-md transition duration-200">
                 Back to List
             </a>
         </div>
